# fraud-detection-mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  retrain.yml
.streamlit/: config.toml
app/: demo.py
configs/: config.yaml
k8s/base/: deployment.yaml  hpa.yaml  service.yaml
k8s/overlays/aws/: kustomization.yaml
k8s/overlays/local/: kustomization.yaml
models/: metadata.json  model.json  reference_sample.parquet
monitoring/: grafana-dashboard.json  prometheus.yml
samples/: demo_batch_a.csv  demo_batch_b.csv  demo_batch_c.csv
scripts/: export_demo_assets.py  export_holdout.py  simulate_traffic.py
src/fraud_detection/: config.py  data.py  drift.py  features.py  retrain.py  train.py
src/fraud_detection/api/: main.py  monitoring.py  schemas.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_retrain.py
