[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection"
version = "0.1.0"
description = "Production-grade fraud detection: training pipeline, MLflow tracking, FastAPI serving"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "mlflow>=2.14",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
